--- a/bifeldy-sd3-wf-452/bifeldy-sd3-wf-452.csproj
+++ b/bifeldy-sd3-wf-452/bifeldy-sd3-wf-452.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Components\FixAutoScrollFlowLayoutPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Components\ListViewColumnSorter.cs" />
     <Compile Include="Components\MonthYearPicker.cs">
       <SubType>Component</SubType>
     </Compile>
