File Sign Alternative ~

--- a/bifeldy-sd3-wf-452/App.config
+++ b/bifeldy-sd3-wf-452/App.config
@@ -24,7 +24,8 @@
     <add key="auto_db" value="true" />
     <add key="local_allowed_file_ext" value=".dmp" />
     <add key="local_allowed_file_mime" value="application/octet-stream" />
-    <add key="local_allowed_file_sign" value="03 01 ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? 00 22 53 59 53 22 2E 22 53 59 53 5F 45 58 50 4F 52 54 5F" />
+    <add key="local_allowed_file_sign_primary" value="00 ?? 02 ?? ?? 05" />
+    <add key="local_allowed_file_sign_secondary" value="06 ?? ?? ?? ?? 0B" />
     <add key="file_1_name" value="idm_metadata_g" />
     <add key="file_1_ext" value=".dmp" />
     <add key="file_2_name" value="idm_43table_g" />
