--- a/bifeldy-sd3-wf-452/bifeldy-sd3-wf-452.csproj
+++ b/bifeldy-sd3-wf-452/bifeldy-sd3-wf-452.csproj
@@ -178,6 +178,9 @@
     <None Include="bifeldy-sd3-wf-452.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Content Include="publicKey.asc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
