--- a/bifeldy-sd3-wf-452/App.config
+++ b/bifeldy-sd3-wf-452/App.config
@@ -1,34 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup> 
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-  </startup>
-  <appSettings>
-    <add key="local_db_only" value="true" />
-    <add key="local_db_name" value="bifeldy-sd3-wf-452.db" />
-    <add key="setting_debug" value="" />
-    <add key="max_old_retention_day" value="14" />
-    <add key="windows_startup" value="false" />
-    <add key="updater_ftp_ip_domain" value="127.0.0.1" />
-    <add key="updater_ftp_port" value="21" />
-    <add key="updater_ftp_username" value="admin@localhost" />
-    <add key="updater_ftp_password" value="root" />
-    <add key="smtp_server_ip_domain" value="127.0.0.1" />
-    <add key="smtp_server_port" value="25" />
-    <add key="smtp_server_username" value="admin@localhost" />
-    <add key="smtp_server_password" value="root" />
-    <add key="ws_syncho" value="http://127.0.0.1" />
-    <add key="bypass_login" value="false" />
-    <add key="bypass_ip_mac" value="false" />
-    <add key="minimize_on_close" value="true" />
-    <add key="auto_db" value="true" />
-    <add key="local_allowed_file_ext" value=".dmp" />
-    <add key="local_allowed_file_mime" value="application/octet-stream" />
-    <add key="local_allowed_file_sign_primary" value="00 ?? 02 ?? ?? 05" />
-    <add key="local_allowed_file_sign_secondary" value="06 ?? ?? ?? ?? 0B" />
-    <add key="file_1_name" value="idm_metadata_g" />
-    <add key="file_1_ext" value=".dmp" />
-    <add key="file_2_name" value="idm_43table_g" />
-    <add key="file_2_ext" value=".dmp" />
-  </appSettings>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    </startup>
+    <appSettings>
+        <add key="local_db_only" value="true" />
+        <add key="local_db_name" value="bifeldy-sd3-wf-452.db" />
+        <add key="setting_debug" value="" />
+        <add key="max_old_retention_day" value="14" />
+        <add key="windows_startup" value="false" />
+        <add key="updater_ftp_ip_domain" value="127.0.0.1" />
+        <add key="updater_ftp_port" value="21" />
+        <add key="updater_ftp_username" value="admin@localhost" />
+        <add key="updater_ftp_password" value="root" />
+        <add key="smtp_server_ip_domain" value="127.0.0.1" />
+        <add key="smtp_server_port" value="25" />
+        <add key="smtp_server_username" value="admin@localhost" />
+        <add key="smtp_server_password" value="root" />
+        <add key="ws_syncho" value="http://127.0.0.1" />
+        <add key="bypass_login" value="false" />
+        <add key="bypass_ip_mac" value="false" />
+        <add key="minimize_on_close" value="false" />
+        <add key="auto_db" value="true" />
+        <add key="select_file_ext" value=".dmp.7z.sig" />
+        <add key="allowed_file_mime" value="application/x-7z-compressed" />
+        <add key="sig_name_pattern" value="idm_(metadata|[0-9]*table)_([a-z0-9]{4})_([0-9]{6})(.dmp.7z.sig)" />
+    </appSettings>
 </configuration>
