--- a/bifeldy-sd3-wf-452/App.config
+++ b/bifeldy-sd3-wf-452/App.config
@@ -6,7 +6,7 @@
     <appSettings>
         <add key="local_db_only" value="true" />
         <add key="local_db_name" value="bifeldy-sd3-wf-452.db" />
-        <add key="setting_debug" value="" />
+        <add key="setting_kunci_suffix" value="backupgps" />
         <add key="max_old_retention_day" value="14" />
         <add key="windows_startup" value="false" />
         <add key="updater_ftp_ip_domain" value="127.0.0.1" />
@@ -22,8 +22,8 @@
         <add key="bypass_ip_mac" value="false" />
         <add key="minimize_on_close" value="false" />
         <add key="auto_db" value="true" />
-        <add key="select_file_ext" value=".dmp.7z.sig" />
+        <add key="select_file_ext" value=".7z.sig" />
         <add key="allowed_file_mime" value="application/x-7z-compressed" />
-        <add key="sig_name_pattern" value="idm_(metadata|[0-9]*table)_([a-z0-9]{4})_([0-9]{6})(.dmp.7z.sig)" />
+        <add key="sig_name_pattern" value="idm_(metadata|[0-9]*table)_([a-z0-9]{4})_([0-9]{6,8})((.dmp|.sql).7z.sig)" />
     </appSettings>
 </configuration>
