--- a/bifeldy-sd3-wf-452/bifeldy-sd3-wf-452.csproj
+++ b/bifeldy-sd3-wf-452/bifeldy-sd3-wf-452.csproj
@@ -105,6 +105,9 @@
     <Compile Include="Components\NoBorderTab.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Components\SplitButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
